Представления - динамические переключения

--- a/Bookinist/Views/Windows/MainWindow.xaml
+++ b/Bookinist/Views/Windows/MainWindow.xaml
@@ -17,6 +17,11 @@
             <MenuItem Header="Файл">
                 <MenuItem Header="Выход" Command="{StaticResource CloseWindowCommand}"/>
             </MenuItem>
+
+            <MenuItem Header="Покупатели"/>
+            <MenuItem Header="Книги"/>
+            <MenuItem Header="Статистика"/>
+
         </Menu>
 
         <StatusBar DockPanel.Dock="Bottom">
