--- a/Bookinist/Views/StatisticsView.xaml
+++ b/Bookinist/Views/StatisticsView.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Bookinist.Views"
+             xmlns:l="clr-namespace:Bookinist.Views" mc:Ignorable="d" 
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:vm="clr-namespace:Bookinist.ViewModels"
              DataContext="{Binding StatisticsModel, Source={StaticResource Locator}}"
-             mc:Ignorable="d" 
+             d:DataContext="{d:DesignInstance {x:Type vm:StatisticsViewModel}}"
              d:DesignHeight="450" d:DesignWidth="800">
 
     <i:Interaction.Triggers>
@@ -16,15 +17,21 @@
     </i:Interaction.Triggers>
 
     <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock  FontSize="30" FontWeight="Bold" Text="Статистика"/>
-            <TextBlock HorizontalAlignment="Center" Margin="0, 10">
-                Всего книг: <Run Text="{Binding BooksCount}" Foreground="{StaticResource RedBrush}">
-                    <Run.TextDecorations>
-                        <TextDecoration/>
-                    </Run.TextDecorations>
-                </Run>
-            </TextBlock>
-        </StackPanel>
+        <TabControl>
+            <TabItem Header="Книги">
+                <GroupBox Header="Бестселлеры">
+                    <DataGrid ItemsSource="{Binding BestSellers}" AutoGenerateColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Книга" Width="*" Binding="{Binding Book.Name}"/>
+                            <DataGridTextColumn Header="Количество продаж" Binding="{Binding SellCount}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </GroupBox>
+            </TabItem>
+
+            <TabItem Header="Покупатели"></TabItem>
+            <TabItem Header="Продавцы"></TabItem>
+            <TabItem Header="Категории"></TabItem>
+        </TabControl>
     </Grid>
 </UserControl>
